@@ -1,6 +1,10 @@
 # ChangeLog for dev-haskell/gtk2hs
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/Attic/ChangeLog,v 1.13 2005/06/30 07:47:03 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/Attic/ChangeLog,v 1.14 2005/08/31 10:08:00 dcoutts Exp $
+
+  31 Aug 2005; <duncan@gentoo.org> gtk2hs-0.9.7.ebuild, gtk2hs-0.9.8.ebuild:
+  Make gtk2hs-0.9.7 and gtk2hs-0.9.8 use only haddock-0.6 since they will not
+  work with haddock-0.7.
 
   30 Jun 2005; David Holm <dholm@gentoo.org> gtk2hs-0.9.8.ebuild:
   Added to ~ppc.
